Modify paths and delete index.html from src folder

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/styles/styles.css">
-    <script src="../index.js" defer></script>
+    <link rel="stylesheet" href="./public/styles/styles.css">
+    <script src="./index.js" defer></script>
     <title>Vimer</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="header-class">        
             <header class="nav-header">
                 <div class="logo">
-                    <img src="../public/images/vimer2.png" alt="vimer-logo">
+                    <img src="./public/images/vimer2.png" alt="vimer-logo">
                     <h2>vimer.exe</h2>
                 </div>            
                 <nav>
@@ -144,7 +144,7 @@
     </section>
     <section class="section-two" id="about">
         <div class="main-container-2">
-            <img src="../public/images/vimer3.jpg" alt="vim-text-editor">
+            <img src="./public/images/vimer3.jpg" alt="vim-text-editor">
             <div class="section-two-content">
                 <h1>About <span>vimer</span></h1>  
                 <h2>A Tiny <span class="span-h2">Text Editor</span></h2>                              
