Add button to enable file input

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./public/icon/vimer.ico">
+    <link rel="icon" href="./public/icon/vimer-icon.ico">
     <link rel="stylesheet" href="./public/styles/styles.css">
     <script src="./index.js" defer></script>
     <title>Vimer</title>
+    <!--/*Commit test*/-->
 </head>
 <body>
     <section class="section-one">
