--- a/index.html
+++ b/index.html
@@ -123,7 +123,13 @@
                         <div class="tooltip-container-button-last">
                             Hyperlink
                         </div> 
-                    </button>                                                       
+                    </button>
+                    <button onclick="purifyContent()" class="button-dark-mode">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#c0c0c0}</style><path d="M566.6 54.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192-34.7-34.7c-4.2-4.2-10-6.6-16-6.6c-12.5 0-22.6 10.1-22.6 22.6v29.1L364.3 320h29.1c12.5 0 22.6-10.1 22.6-22.6c0-6-2.4-11.8-6.6-16l-34.7-34.7 192-192zM341.1 353.4L222.6 234.9c-42.7-3.7-85.2 11.7-115.8 42.3l-8 8C76.5 307.5 64 337.7 64 369.2c0 6.8 7.1 11.2 13.2 8.2l51.1-25.5c5-2.5 9.5 4.1 5.4 7.9L7.3 473.4C2.7 477.6 0 483.6 0 489.9C0 502.1 9.9 512 22.1 512l173.3 0c38.8 0 75.9-15.4 103.4-42.8c30.6-30.6 45.9-73.1 42.3-115.8z"/></svg>
+                        <div class="tooltip-container-button-last">
+                            Purify content
+                        </div>
+                    </button>                                                 
                     <button onclick="exportAsTxt()" class="button-dark-mode">
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V288H216c-13.3 0-24 10.7-24 24s10.7 24 24 24H384V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V64zM384 336V288H494.1l-39-39c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l80 80c9.4 9.4 9.4 24.6 0 33.9l-80 80c-9.4 9.4-24.6 9.4-33.9 0s-9.4-24.6 0-33.9l39-39H384zm0-208H256V0L384 128z"/></svg>
                         <div class="tooltip-container-button-last">
@@ -136,11 +142,17 @@
                             Toggle Off Tooltips
                         </div>
                     </button>
-                </div>
-                <!-- Here, navbar needs to be implemented-->                        
+                </div>                                      
                 <div class="textarea-section">              
                     <!--<textarea class="notepad-area dark-mode" name="notepad-area" id="" cols="30" rows="10"></textarea>-->
-                    <div class="notepad-area dark-mode" contenteditable="true" spellcheck="false"></div>
+                    <div class="notepad-area dark-mode" id="drop-zone" contenteditable="true"
+                    spellcheck="false" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
+                    </div>
+                    <div class="character-count">
+                        <p>Windows (CRLF)</p>
+                        <p>Char count:</p>
+                        <p>UTF-8</p>
+                    </div>
                 </div>
             </div>
         </div>
