--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
             <header class="nav-header">
                 <div class="logo">
                     <img src="./public/images/vimer2.png" alt="vimer-logo">
-                    <h2>vimer.exe</h2>
-                </div>            
+                    <h2 class="nav-h2">vimer.exe</h2>
+                <div class="time-container">
+                    <h3 class="time" id="time"></h3>
+                </div>
+                </div>          
                 <nav>
                     <ul class="nav-links">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#about">ABOUT</a></li>                        
-                        <li><a href="#github">GITHUB</a></li>
+                        <li><a href="#" class="nav-links-a">HOME</a></li>
+                        <li><a href="#about" class="nav-links-a">ABOUT</a></li>                        
+                        <li><a href="#github" class="nav-links-a">GITHUB</a></li>
                         <li>
                             <button class="nightmode-button">
                                 <svg class="nightmode-button-svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"/></svg>
@@ -149,9 +152,17 @@
                     spellcheck="false" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
                     </div>
                     <div class="character-count">
-                        <p>Windows (CRLF)</p>
-                        <p>Char count:</p>
-                        <p>UTF-8</p>
+                        <div class="ch-count-button">
+                            <button class="clear-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"/></svg>
+                                Clear
+                            </button>
+                        </div>
+                        <div class="ch-count-paragraphs">
+                            <p>Windows (CRLF)</p>
+                            <p>Char count:</p>
+                            <p>UTF-8</p>
+                        </div>
                     </div>
                 </div>
             </div>
