--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="main-container-2">
             <img src="./public/images/vimer3.jpg" alt="vim-text-editor">
             <div class="section-two-content">
-                <h1>About <span>vimer</span></h1>  
+                <h1>About <span class="vimer">vimer</span></h1>  
                 <h2>A Tiny <span class="span-h2">Text Editor</span></h2>                              
                 <p class="section-two-paragraph">
                     Vimer is built as a tiny simulator that mimics the behaviour of some of the larger text editors. 
