--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <nav>
                     <ul class="nav-links">
                         <li><a href="#" class="nav-links-a">HOME</a></li>
-                        <li><a href="#about" class="nav-links-a">ABOUT</a></li>                        
+                        <li><a href="#about" class="nav-links-a">ABOUT</a></li>
+                        <li><a href="./contact.html" target="_blank" class="nav-links-a">CONTACT</a></li>                      
                         <li><a href="#github" class="nav-links-a">GITHUB</a></li>
                         <li>
                             <button class="nightmode-button">
