--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a href="#" class="nav-links-a">HOME</a></li>
                         <li><a href="#about" class="nav-links-a">ABOUT</a></li>
                         <li><a href="./contact.html" target="_blank" class="nav-links-a">CONTACT</a></li>                      
-                        <li><a href="#github" class="nav-links-a">GITHUB</a></li>
+                        <li><a href="https://github.com/faticamer" class="nav-links-a">GITHUB</a></li>
                         <li>
                             <button class="nightmode-button">
                                 <svg class="nightmode-button-svg svg-dark" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M361.5 1.2c5 2.1 8.6 6.6 9.6 11.9L391 121l107.9 19.8c5.3 1 9.8 4.6 11.9 9.6s1.5 10.7-1.6 15.2L446.9 256l62.3 90.3c3.1 4.5 3.7 10.2 1.6 15.2s-6.6 8.6-11.9 9.6L391 391 371.1 498.9c-1 5.3-4.6 9.8-9.6 11.9s-10.7 1.5-15.2-1.6L256 446.9l-90.3 62.3c-4.5 3.1-10.2 3.7-15.2 1.6s-8.6-6.6-9.6-11.9L121 391 13.1 371.1c-5.3-1-9.8-4.6-11.9-9.6s-1.5-10.7 1.6-15.2L65.1 256 2.8 165.7c-3.1-4.5-3.7-10.2-1.6-15.2s6.6-8.6 11.9-9.6L121 121 140.9 13.1c1-5.3 4.6-9.8 9.6-11.9s10.7-1.5 15.2 1.6L256 65.1 346.3 2.8c4.5-3.1 10.2-3.7 15.2-1.6zM160 256a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zm224 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"/></svg>
@@ -214,7 +214,7 @@
             <article class="card">
                 <header class="card-header">
                     <p>15th April 2022</p>
-                    <h2 onclick="redirect(this.id)" class="card-h2">Advanced Console Calculators</h2>
+                    <h2 id="calculators" onclick="redirect(this.id)" class="card-h2">Advanced Console Calculators</h2>
                 </header>
                 <div class="card-author">
                     <a href="#" class="author-avatar">
@@ -234,7 +234,7 @@
             <article class="card">
                 <header class="card-header">
                     <p>15th May 2023</p>
-                    <h2 onclick="redirect(this.id)" class="card-h2">Canteen System</h2>
+                    <h2 id="canteenSystem" onclick="redirect(this.id)" class="card-h2">Canteen System</h2>
                 </header>
                 <div class="card-author">
                     <a href="#" class="author-avatar">                    
@@ -254,7 +254,7 @@
             <article class="card">
                 <header class="card-header">
                     <p>2nd October 2023</p>
-                    <h2 onclick="redirect(this.id)" class="card-h2">WiFi QR Code Generator</h2>
+                    <h2 id="wifiGenerator" onclick="redirect(this.id)" class="card-h2">WiFi QR Code Generator</h2>
                 </header>
                 <div class="card-author">
                     <a href="#" class="author-avatar">
@@ -274,7 +274,7 @@
             <article class="card dark-mode">
                 <header class="card-header">
                     <p>20th June 2023</p>
-                    <h2 onclick="redirect(this.id)" class="card-h2">Capstone Project</h2>
+                    <h2 id="capstone" onclick="redirect(this.id)" class="card-h2">Capstone Project</h2>
                 </header>
                 <div class="card-author">
                     <a href="#" class="author-avatar">
